--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       font-family: 'Poppins', sans-serif;
     }
   </style>
-  <title>React App</title>
+  <title>Vipul Goyal</title>
 </head>
 
 <body>
